--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,6 +6,11 @@
             android:id="@+id/nav_currencies"
             android:icon="@drawable/ic_attach_money"
             android:title="Currencies" />
+
+        <item
+            android:id="@+id/nav_ynet"
+            android:icon="@drawable/ic_rss_feed"
+            android:title="Ynet" />
     </group>
 
     <item android:title="Communicate">
