--- a/app/src/main/res/layout/fragment_ynet.xml
+++ b/app/src/main/res/layout/fragment_ynet.xml
@@ -2,12 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context="hackeru.edu.parsingxml.YnetFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvYnet"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
