--- a/app/src/main/res/layout/ynet_item.xml
+++ b/app/src/main/res/layout/ynet_item.xml
@@ -14,13 +14,15 @@
 
         <ImageView
             android:id="@+id/ivThumbnail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
+
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:srcCompat="@mipmap/ic_launcher"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
 
         <TextView
             android:id="@+id/tvTitle"
